--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "@dnd-kit/utilities": "^3.2.1",
     "firebase": "^10.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -26,6 +25,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "react-router-dom": "^6.16.0",
     "vite": "^4.4.5"
   }
 }
